Fix contrast of menu items. See #81

--- a/app/frontend/static/styles/poliscoops.scss
+++ b/app/frontend/static/styles/poliscoops.scss
@@ -116,7 +116,7 @@ nav.navbar .nav-link {
     border:none;
     text-transform: uppercase;
     font-weight: 800;
-    color: #0603A6;
+    color: #3D7CA4;
 }
 
 nav.navbar a.nav-link-selection {
@@ -165,7 +165,7 @@ nav.navbar .nav-link {
   font-family: $font-nav;
   font-size: 28px;
   font-weight: 800;
-  color: #9EC3DA !important;
+  color: #3D7CA4 !important;
 }
 
 nav.navbar .nav-link:hover {
